--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "joi": "^13.7.0",
+    "monk": "^6.0.6",
     "nodemon": "^1.18.4"
   }
 }
